# MTGA_Draft_17Lands

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: app_update.py  overlay.py
src/app_update/: AppUpdate.py  __init__.py
src/card_logic/: CardResult.py  DeckMetrics.py  SetMetrics.py  __init__.py
src/config/: CardData.py  CardLogic.py  Configuration.py  DeckType.py  Features.py  Settings.py  __init__.py
src/file_extractor/: FileExtractor.py  Result.py  __init__.py
src/limited_sets/: LimitedSets.py  SetDictionary.py  SetInfo.py  __init__.py
src/log_scanner/: ArenaScanner.py  __init__.py
src/logger/: CustomFormatter.py  __init__.py
src/overlay/: CreateCardToolTip.py  Overlay.py  ScaledWindow.py  TableInfo.py  __init__.py
tests/: test_app_update.py  test_configuration.py  test_limited_sets.py
